--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,7 @@ layout: htmlCompressor
   {% if site.google != "" %}<meta name="google-site-verification" content="{{ site.google }}">{% endif %}
 
   <!-- Favicon & RSS -->
+  {% feed_meta %}
   <link rel="icon" href="{{ site.baseurl }}/assets/img/favicon.ico">
   <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.baseurl }}/rss.xml">
 
